--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://srinath.github.io/potfolio",
+  "homepage": "https://srinath.github.io/portfolio",
   "name": "3d-portfolio",
   "private": true,
   "version": "0.0.0",
